--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASSWORD}
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.show-sql=true
 
