--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${USERNAME}
-spring.datasource.password=${PASSWORD}
-
+spring.datasource.url=jdbc:mysql://localhost/photoarchive?serverTimezone=Europe/Warsaw
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=user1
+spring.datasource.password=pass
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.show-sql=true
+hibernate.show_sql=false
+hibernate.format_sql=false
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.dll-auto=update
 
